/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements. See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Shared configuration for the api-checker included build. Lives outside Kafka's main
// settings tree so its Maven dependencies (in :maven-plugin) don't end up on every
// developer's buildSrc classpath, and so each published artifact carries only the classes
// its consumers need.

// Default the published version to the same string as the rest of Kafka (gradle.properties
// at the repo root). release.py's `updateVersion` task writes that file, so the included
// build's artifacts ship under the AK release version automatically. `-PkafkaPluginsVersion=…`
// overrides for one-off out-of-band publishes.
def rootGradleProps = new Properties()
def rootGradlePropsFile = file('../gradle.properties')
if (rootGradlePropsFile.exists()) {
    rootGradlePropsFile.withInputStream { rootGradleProps.load(it) }
}
def kafkaVersion = providers.gradleProperty('kafkaPluginsVersion')
        .orElse(providers.provider { rootGradleProps.getProperty('version') })
        .orElse('1.0.0-SNAPSHOT')

allprojects {
    group = 'org.apache.kafka'
    version = kafkaVersion.get()

    repositories {
        gradlePluginPortal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'
    apply plugin: 'checkstyle'

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
        // Maven Central requires sources + javadoc jars alongside every artifact.
        withSourcesJar()
        withJavadocJar()
    }

    test {
        useJUnitPlatform()
    }

    checkstyle {
        toolVersion = '12.3.1'
        configDirectory = file("$rootDir/../checkstyle")
        configProperties = [importControlFile: 'import-control-buildsrc.xml']
    }

    publishing {
        repositories {
            // Mirrors the root Kafka project's publishing.repositories block — credentials
            // come from ~/.gradle/gradle.properties via the same -PmavenUrl / -PmavenUsername /
            // -PmavenPassword properties release.py uses.
            maven {
                url = project.hasProperty('mavenUrl') ? project.mavenUrl : ''
                credentials {
                    username = project.hasProperty('mavenUsername') ? project.mavenUsername : ''
                    password = project.hasProperty('mavenPassword') ? project.mavenPassword : ''
                }
            }
        }
    }

    def skipSigning = project.hasProperty('skipSigning') && skipSigning.toBoolean()
    def shouldSign = !skipSigning && !version.toString().endsWith('SNAPSHOT')
    if (shouldSign) {
        signing {
            sign publishing.publications
        }
    }
}
